<resources>
    <string name="app_name">FormValidation</string>
    <string name="topic">Register Student</string>
    <string name="txt01">Enter Student ID</string>
    <string name="txt02">Academic Year</string>
    <string name="cheack">Select The Semester</string>
    <string name="cheack1">Agree Theams And Conditions</string>
    <string name="s_btn">Submit</string>
    <string name="c_btn">Cancel</string>


    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="semester">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>
</resources>