<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/topic"
            android:textSize="34sp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:id="@+id/stuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/txt01"
            android:inputType="text"
            android:textSize="24dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/txt02"
            android:textSize="20dp"
            />

        <Spinner
            android:id="@+id/spyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:entries="@array/years"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:scrollbarSize="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cheack"
            android:textSize="20dp"
            />

        <Spinner
            android:id="@+id/spsemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:entries="@array/semester"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:scrollbarSize="20dp" />

        <CheckBox
            android:id="@+id/cbagree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/cheack1"
            android:textSize="16dp"
            />

        <Button
            android:id="@+id/dtnsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="10dp"
            android:onClick="submit"
            android:text="Button"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textSize="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>